name:                reflex-utils
version:             0.2.1.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/adamConnerSax/reflex-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2015 Adam Conner-Sax
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

flag wkwebview
  description: Use wkWebview control rather than ghcjs
  default: False

flag warp
  description: Use warp rather than ghcjs
  default: True

flag ghcjs
  description: Use GHCJS
  default: False
  
custom-setup
  setup-depends: base >= 4.6,
                 cabal-macosx >= 0.2.3.4 && < 0.3,
                 Cabal >= 1.24.2 && < 1.25
                     
library
  if flag(wkwebview) || flag(warp)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
  hs-source-dirs: src
  exposed-modules:
                  Reflex.Dom.Contrib.Layout.All
                  Reflex.Dom.Contrib.ReflexConstraints
                  Reflex.Dom.Contrib.Layout.Types
                  Reflex.Dom.Contrib.Layout.ClayUtils
                  Reflex.Dom.Contrib.Layout.FlexLayout
                  Reflex.Dom.Contrib.Layout.OptimizedFlexLayout
                  Reflex.Dom.Contrib.Layout.TabLayout
                  Reflex.Dom.Contrib.Layout.LayoutM
                  Reflex.Dom.Contrib.Layout.LayoutMFlex
                  Reflex.Dom.Contrib.Layout.Events
--                  Reflex.Dom.Contrib.Layout.GridConfigs
--                  Reflex.Dom.Contrib.Layout.GridLayout                    
--                  Reflex.Dom.Contrib.StackedMonadWidget             
                  Reflex.Dom.Contrib.SimpleForm
                  Reflex.Dom.Contrib.SimpleForm.Builder
                  Reflex.Dom.Contrib.SimpleForm.Instances
                  Reflex.Dom.Contrib.SimpleForm.AllDefault                  
  other-modules:
                Reflex.Dom.Contrib.SimpleForm.Instances.Basic
                Reflex.Dom.Contrib.SimpleForm.Instances.Containers
                Reflex.Dom.Contrib.SimpleForm.Instances.Extras
  if flag(wkwebview) || flag(warp)
   build-depends: ghcjs-dom == 0.7.*
                , jsaddle
  else
   build-depends: ghcjs-dom
  build-depends:       base >= 4.7 && < 5
                     , dependent-map
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , transformers
                     , exception-transformers
                     , mtl
                     , monad-control
                     , lens
                     , data-default
                     , ref-tf
                     , containers
                     , semigroups
                     , clay
                     , text
                     , bytestring
                     , template-haskell
                     , dataBuilder
                     , ghc-prim
                     , readable
                     , mmorph
                     , time
                     , hashable
                     , unordered-containers
                     , validation

  if impl(ghcjs)
    build-depends:     ghcjs-base

  default-language:    Haskell2010
  ghc-prof-options: -fprof-auto
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2       

executable reflex-utils-simpleForm
  if flag(warp)
    buildable: False
  hs-source-dirs:      app/simpleForm
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(wkwebview)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
   build-depends: jsaddle-wkwebview
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , transformers
                     , lens
                     , mtl
                     , ref-tf
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
                     , pretty-show
                     , time
                     , hashable
                     , unordered-containers
                     , validation
  default-language:    Haskell2010


executable reflex-utils-layout
  if flag(warp)
    buildable: False
  hs-source-dirs:      app/layout
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(wkwebview)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
   build-depends: jsaddle-wkwebview
  if flag(ghcjs)
    cpp-options: -DUSE_GHCJS
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , exception-transformers
                     , ref-tf
                     , lens
                     , transformers
                     , mtl
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
  default-language:    Haskell2010


executable reflex-utils-simpleForm-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/simpleForm
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , transformers
                     , mtl
                     , lens
                     , ref-tf
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
                     , pretty-show
                     , time
                     , hashable
                     , unordered-containers
                     , validation
  default-language:    Haskell2010


executable reflex-utils-layout-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/layout
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , exception-transformers
                     , ref-tf
                     , lens
                     , transformers
                     , mtl
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
  default-language:    Haskell2010

  
--test-suite reflex-gridLayout-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , reflex-gridLayout
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamConnerSax/reflex-utils
