name:                reflex-utils
version:             0.2.2.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/adamConnerSax/reflex-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2015 Adam Conner-Sax
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag wkwebview
  description: Use wkWebview control rather than ghcjs
  default: False

flag warp
  description: Use warp rather than ghcjs
  default: True

flag ghcjs
  description: Use GHCJS
  default: False
  
                     
library
  if flag(wkwebview) || flag(warp)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
  hs-source-dirs: src
  exposed-modules:
                  Reflex.Dom.Contrib.DynamicUtils
                  Reflex.Dom.Contrib.EventUtils
                  Reflex.Dom.Contrib.ReflexConstraints
                  Reflex.Dom.Contrib.CssUtils
                  Reflex.Dom.Contrib.Editor
                  Reflex.Dom.Contrib.Widgets.WidgetResult
                  Reflex.Dom.Contrib.Widgets.SafeDropdown
                  Reflex.Dom.Contrib.Widgets.ModalEditor
                  Reflex.Dom.Contrib.Widgets.EditableCollection
                  Reflex.Dom.Contrib.Layout.All
                  Reflex.Dom.Contrib.Layout.Types
                  Reflex.Dom.Contrib.Layout.ClayUtils
                  Reflex.Dom.Contrib.Layout.FlexLayout
                  Reflex.Dom.Contrib.Layout.OptimizedFlexLayout
                  Reflex.Dom.Contrib.Layout.TabLayout
                  Reflex.Dom.Contrib.Layout.LayoutM
                  Reflex.Dom.Contrib.Layout.LayoutMFlex
                  Reflex.Dom.Contrib.Layout.Events
--                  Reflex.Dom.Contrib.Layout.GridConfigs
--                  Reflex.Dom.Contrib.Layout.GridLayout                    
--                  Reflex.Dom.Contrib.StackedMonadWidget             
                  Reflex.Dom.Contrib.FormBuilder
                  Reflex.Dom.Contrib.FormBuilder.DynValidation
                  Reflex.Dom.Contrib.FormBuilder.Configuration
                  Reflex.Dom.Contrib.FormBuilder.FormEditor                  
                  Reflex.Dom.Contrib.FormBuilder.Builder
                  Reflex.Dom.Contrib.FormBuilder.Instances
                  Reflex.Dom.Contrib.FormBuilder.AllDefault
                  Reflex.Dom.Contrib.FormBuilder.Instances.Containers
                  Reflex.Dom.Contrib.FormBuilder.Instances.Basic
                  Reflex.Dom.Contrib.FormBuilder.Instances.ModalForm
  other-modules:

  if flag(wkwebview) || flag(warp)
   build-depends: ghcjs-dom 
                , jsaddle
                , unordered-containers >= 0.2.8.0
  else
   build-depends: ghcjs-dom
                , unordered-containers
  build-depends:       base >= 4.7 && < 5
                     , dependent-map
                     , array
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-sumType-utilities
                     , reflex-collections
                     , dependent-map
                     , transformers
                     , exception-transformers
                     , mtl
                     , file-embed
                     , monad-control
                     , keys
                     , lens
                     , data-default
                     , ref-tf
                     , containers
                     , bifunctors
                     , profunctors
                     , semigroups
                     , clay
                     , text
                     , bytestring
                     , template-haskell
                     , dataBuilder
                     , perConstructor-sop
                     , generics-sop
                     , ghc-prim
                     , readable
                     , mmorph
                     , time
                     , these
                     , tuple
                     , hashable
                     , safe
                     , validation

  if impl(ghcjs)
    build-depends:     ghcjs-base

  default-language:    Haskell2010
  ghc-prof-options: -fprof-auto
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2       

executable reflex-utils-formBuilder
  if flag(warp)
    buildable: False
  hs-source-dirs:      app/formBuilder
  main-is:             Main.hs
  other-modules:       Css
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(wkwebview)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
   build-depends: jsaddle-wkwebview
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS
                
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , transformers
                     , lens
                     , data-default
                     , mtl
                     , ref-tf
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
                     , pretty-show
                     , time
                     , hashable
                     , unordered-containers
                     , validation
  default-language:    Haskell2010


executable reflex-utils-layout
  if flag(warp)
    buildable: False
  hs-source-dirs:      app/layout
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(wkwebview)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
   build-depends: jsaddle-wkwebview
  if flag(ghcjs)
    cpp-options: -DUSE_GHCJS
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , exception-transformers
                     , ref-tf
                     , data-default
                     , dataBuilder
                     , lens
                     , transformers
                     , mtl
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
  default-language:    Haskell2010


executable reflex-utils-formBuilder-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/formBuilder
  main-is:             Main.hs
  other-modules:       Css
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 

  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , transformers
                     , mtl
                     , data-default
                     , dataBuilder
                     , lens
                     , ref-tf
                     , file-embed
                     , clay
                     , process
                     , text
                     , bytestring
                     , containers
                     , pretty-show
                     , time
                     , hashable
                     , unordered-containers
                     , validation
  default-language:    Haskell2010

executable reflex-utils-editor-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/editor
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-utils
                     , ghcjs-dom
                     , containers
                     , lens
                     , profunctors
                     , dataBuilder
                     , process
                     , text
  default-language:    Haskell2010

executable reflex-utils-widgets-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/widgets
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-collections
                     , reflex-utils
                     , ghcjs-dom
                     , containers
                     , lens
                     , dataBuilder
                     , process
                     , text
  default-language:    Haskell2010


  
executable reflex-utils-layout-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/layout
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
                , cabal-macosx >= 0.2.3.4 && < 0.3
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , reflex-utils
                     , ghcjs-dom
                     , exception-transformers
                     , ref-tf
                     , data-default
                     , lens
                     , transformers
                     , mtl
                     , process                     
                     , file-embed
                     , clay
                     , text
                     , bytestring
                     , containers
  default-language:    Haskell2010

  
--test-suite reflex-gridLayout-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , reflex-gridLayout
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010



executable reflex-utils-forRyan-warp
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app/forRyan
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , reflex
                     , ref-tf
                     , reflex-dom
                     , reflex-dom-contrib
                     , ghcjs-dom
                     , containers
                     , text
                     , process
                     , safe
  default-language:    Haskell2010

    
source-repository head
  type:     git
  location: https://github.com/adamConnerSax/reflex-utils
